# Beamformer-optimization

./: README.md  download  pyproject.toml
configs/: default.yaml
docs/: baseline_matrix.md
outputs/evals/classical_literature_core_20260512_234518/: config.json  per_batch_metrics.csv  summary_metrics.csv
outputs/evals/classical_literature_core_20260512_234541/: per_batch_metrics.csv  summary_metrics.csv
outputs/evals/classical_literature_core_20260513_154034/: per_batch_metrics.csv  summary_metrics.csv
outputs/evals/classical_literature_core_20260513_154044/: config.json  per_batch_metrics.csv  summary_metrics.csv
outputs/runs/mlp_fully_loaded_snr10_seed0_20260512_234726/: checkpoint_best.pt  checkpoint_last.pt  config.json  training_metrics.csv
outputs/runs/mlp_fully_loaded_snr10_seed0_20260512_234755/: checkpoint_best.pt  checkpoint_last.pt  training_metrics.csv
outputs/runs/mlp_fully_loaded_snr10_seed0_20260513_154333/: checkpoint_best.pt  checkpoint_last.pt  config.json  training_metrics.csv
outputs/runs/mlp_fully_loaded_snr20_seed0_20260512_235729/: checkpoint_best.pt  config.json  (+2 more)
scripts/: eval_classical_baselines.py  smoke_test.py  train_mlp_supervised.py  train_unfolded_wmmse.py
src/baselines/: fp.py  linear.py  wmmse.py
src/core/: complex_ops.py
src/data/: channel.py
src/experiments/: scenarios.py
src/models/: mlp_beamformer.py  unfolded_wmmse.py
src/mu_miso_bf_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl/: env.py
src/training/: losses.py
src/utils/: logger.py  metrics.py
test/: test_shapes.py
(+32 files in other folders)
