[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mu-miso-bf-lab"
version = "0.1.0"
description = "PyTorch research scaffold for MU-MISO beamforming baselines"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.1",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
